--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,17 @@ log/
 /.env
 !/.env*-*
 /spec/examples.txt
+
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+
+# Ignore pidfiles, but keep the directory.
+/tmp/pids/*
+!/tmp/pids/
+!/tmp/pids/.keep
+
+# Ignore uploaded files in development.
+/storage/*
+!/storage/.keep
