--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ log/
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+yarn.lock
+package-lock.json
 
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
